overtime done, overflow error fixed

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 400;
 
-  background-color: #FFF8E1;
+  background-color: #FFEEC2; /*#FFF8E1*/
 }
 
 .dash li {
